Added "Data" and removed specific bib file to gitignore. Updated "README". Removed import and compute scripts exports (write.csv).

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,8 @@ vignettes/*.pdf
 # R Environment Variables
 .Renviron
 # Personnal add
+/Data/*
 /Output/*
-bibliography.bib
 /Environments/*
 *.html
 *.pdf
