Added link to data to ignored files. Added clustering parameters to Rmd file. Changed project's conda env. Import and compute scripts are now functions. Adapted clustering script for other data. Descriptive and predictive need rework to be fully functionnal.

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@ vignettes/*.pdf
 # R Environment Variables
 .Renviron
 # Personnal add
+# Duplicates are for folders and links
 /Data/*
+Data
 /Output/*
 /Environments/*
 /Params/*
