Updated ignored files. Changed directory creation file drom Rmd to run.R. Removed boxplot plotting in report. Updated saving for optuna parameters. Updated unsupervised ML data selection by removing only NA columns.

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ vignettes/*.pdf
 # Duplicates are for folders and links
 /Data/*
 Data
-/Output/*
+/Output*
 /Environments/*
 /Params/*
 /Images/*
@@ -41,3 +41,5 @@ Data
 *.log
 *.tex
 Data_raw
+figure
+
